--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>「マ」「リ」「ウ」「ス」をランダムに出力して「マリウス」が完成したら中指を立てるJavaScript</h1>
   <input id="ma" type="button" value="リセット" onClick="location.reload()">
-  <button id="ri">スタート</button>
+  <button id="ri" onClick="this.disabled = true">スタート</button>
   <p id="u">ここに結果が表示されるよ！</p>
   <p id="s"></p>
   <script>
